# programming_tech_lab_3

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
chart/: CMakeLists.txt  aggregate.hpp  aggregation_constants.hpp  ichart_builder.hpp
chart/src/: area_chart_builder.cpp  area_chart_builder.hpp  bar_chart_builder.cpp  bar_chart_builder.hpp  gantt_chart_builder.cpp  gantt_chart_builder.hpp  line_chart_builder.cpp  line_chart_builder.hpp  pie_chart_builder.cpp  pie_chart_builder.hpp  render_constants.hpp
cmake/: create_test.cmake
data_model/: CMakeLists.txt  idata.hpp  schema.hpp
data_model/src/: timeline_data.cpp  timeline_data.hpp
database_module/: CMakeLists.txt  idatabase.hpp  idatabase_manager.hpp
database_module/src/: sqlite_db.cpp  sqlite_db.hpp  sqlite_db_manager.cpp  sqlite_db_manager.hpp
docs/pics/: class_chart.mmd  class_data_model.mmd  class_database.mmd  class_diagram.mmd  class_gui.mmd  class_logger.mmd  class_overview.mmd  class_parser.mmd  class_style.mmd  package_diagram.mmd  sequence_load_render.mmd  sequence_render_options.mmd  sequence_startup.mmd  signal_slot.mmd
gui/: CMakeLists.txt  app_compositor.hpp  builder_names.hpp  ichart_exporter.hpp  mainwindow.hpp  ui_strings.hpp
gui/src/: app_compositor.cpp  app_compositor.hpp  chart_model.cpp  chart_model.hpp  chart_presenter.cpp  chart_presenter.hpp  file_glyphs.cpp  file_glyphs.hpp  file_item_delegate.cpp  file_item_delegate.hpp  file_row_widget.cpp  file_row_widget.hpp  lru_cache.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pdf_exporter.cpp  pdf_exporter.hpp  scrollable_chart_view.cpp  scrollable_chart_view.hpp  table_select_dialog.cpp  table_select_dialog.hpp  theme.cpp  theme.hpp  toggle_switch.cpp  toggle_switch.hpp  ui_strings.hpp  welcome_dialog.cpp  welcome_dialog.hpp
ioc_container/: IOC_Contaner.hpp
logger/: CMakeLists.txt  app_logger.hpp  app_sys_logger.cpp  app_sys_logger.hpp  ilogger.hpp  log_entry_stream.hpp  log_levels.hpp  log_settings.hpp  logger_factory.hpp  logger_macros.hpp
logger/src/: app_logger.cpp  app_logger.hpp  log_entry_stream.cpp  log_entry_stream.hpp  log_settings.cpp  logger_factory.cpp  thread_safe_logger.cpp  thread_safe_logger.hpp
parser/: CMakeLists.txt  iparser.hpp  iparser_registry.hpp  parse_exception.hpp  parser_base.hpp
parser/src/: database_parser.cpp  database_parser.hpp  json_parser.cpp  json_parser.hpp  parser_base.hpp  parser_limits.hpp  parser_registry.cpp  parser_registry.hpp
style/: CMakeLists.txt  ichart_style.hpp  ipalette.hpp
style/src/: color_style.cpp  color_style.hpp  grayscale_style.cpp  grayscale_style.hpp  style_palette.hpp
test_data/: MARKET_SHARE_2024.json  MONTHLY_TEMPERATURE.json  QUARTERLY_REVENUE.json  SERIES_10K.json  SERIES_20K.json  SERIES_35K.json  SERIES_50K.json
test_data/InputData/: WEATHER_STATION.sqlite
test_data/invalid/: bad_value.json  broken_syntax.json  not_a_database.sqlite  wrong_schema.json
test_data/output/: SERIES_10K_roundtrip.json  SERIES_20K_roundtrip.json  SERIES_35K_roundtrip.json  TEMPERATURE_NOVOSIB.json
